--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 <div class="logo">My Web</div>
                 <div class="nav">
                     <a class="index" href="index.html"><strong>自己紹介</strong></a>
-                    <a href="http://127.0.0.1:8848/My%20Web/index2.html"><strong>学歴</strong></a>
-                    <a href="http://127.0.0.1:8848/My%20Web/index3.html"><strong>履歴.資格</strong></a>
-                    <a href="http://127.0.0.1:8848/My%20Web/index4.html"><strong>興味</strong></a>
+                    <a href="./index2.html"><strong>学歴</strong></a>
+                    <a href="./index3.html"><strong>履歴.資格</strong></a>
+                    <a href="./index4.html"><strong>興味</strong></a>
                 </div>
             </div>
             
