--- a/index3.html
+++ b/index3.html
@@ -7,8 +7,17 @@
         <link rel="stylesheet" type="text/css" href="css/common.css"/>
 	</head>
 	<body>
-        <div id="wrapper">
+			<div class="wrapper">
             <div class="header">
+                <div class="logo">My Web</div>
+                <div class="nav">
+                    <a class="index" href="index.html"><strong>自己紹介</strong></a>
+                    <a href="./index2.html"><strong>学歴</strong></a>
+                    <a href="./index3.html"><strong>履歴.資格</strong></a>
+                    <a href="./index4.html"><strong>興味</strong></a>
+                </div>
+            </div>
+			 <div class="main">
             <h2>履歴</h2>
             <table width="90%" height="200" border="1" cellspacing="0" cellpadding="0" align="center" >
                 <tr>
@@ -47,7 +56,7 @@
                            <img src="img/k.jpg" >
                            <img src="img/l.jpg" >
                            <img src="img/m.jpg" >
-                           <h3>｡♥｡･ﾟ♡ﾟ･｡♥｡･ﾟ♡ﾟ･｡♥｡｡♥｡･ﾟ♡ﾟ･｡♥｡･ﾟ♡ﾟ･｡♥｡｡♥｡･ﾟ♡ﾟ･｡♥｡･ﾟ♡ﾟ･｡♥｡｡♥｡･ﾟ♡ﾟ･｡♥｡･ﾟ♡ﾟ･｡大好きのみんな｡♥｡｡♥｡･ﾟ♡ﾟ･｡♥｡･ﾟ♡ﾟ･｡♥｡｡♥｡･ﾟ♡ﾟ･｡♥｡･ﾟ♡ﾟ･｡♥｡｡♥｡･ﾟ♡ﾟ･｡♥｡･ﾟ♡ﾟ･｡♥｡｡♥｡･ﾟ♡ﾟ･｡♥｡･ﾟ♡ﾟ･｡♥｡</h3>
+                           <h3>｡･ﾟ♡ﾟ･｡♥｡･ﾟ♡ﾟ･｡♥｡｡♥｡･ﾟ♡ﾟ･｡♥｡･ﾟ♡ﾟ･｡♥｡｡♥｡･ﾟ♡ﾟ･｡♥｡･ﾟ♡ﾟ･｡♥｡｡♥｡･ﾟ♡ﾟ･｡♥｡･ﾟ♡ﾟ･｡♥｡｡♥｡･ﾟ♡ﾟ･｡♥｡･ﾟ♡ﾟ･｡大好きのみんな｡♥｡｡♥｡･ﾟ♡ﾟ･｡♥｡･ﾟ♡ﾟ･｡♥｡｡♥｡･ﾟ♡ﾟ･｡♥｡･ﾟ♡ﾟ･｡♥｡｡♥｡･ﾟ♡ﾟ･｡♥｡･ﾟ♡ﾟ･｡♥｡｡♥｡･ﾟ♡ﾟ･｡♥｡･ﾟ♡ﾟ･｡♥｡</h3>
                    </div>
                       </div>
                        
