--- a/index2.html
+++ b/index2.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="pane1">
                     <img src="img/b.jpg" >
-                    <h3>私は阿辻ゼミで、日本のキャッシュレス化について研究しました。<p> 研究中心 </p><p>１、なぜ日本のキャッシュレスが遅れっているのか。</p><p> ２、アジアで最もキャッシュレス化社会に進んでいる中国の情報を収集して、研究して、キャッシュ レス化のメリットとデメリットを分析しました。</p> ３、日本の状況と似ているスウェーデンのキャッシュレス化を分析して、日本にふさわしいキャッシ ュレス仕組みを想定しました。 この研究から、課題解決のプロセスやメソッドを習得でき、チームワークの強さを感じました。</h3>
+                    <h3>私は阿辻ゼミで、日本のキャッシュレス化について研究しました。<br> 研究中心 <br>１、なぜ日本のキャッシュレスが遅れっているのか。<br> ２、アジアで最もキャッシュレス化社会に進んでいる中国の情報を収集して、研究して、キャッシュ レス化のメリットとデメリットを分析しました。<br> ３、日本の状況と似ているスウェーデンのキャッシュレス化を分析して、日本にふさわしいキャッシ ュレス仕組みを想定しました。 この研究から、課題解決のプロセスやメソッドを習得でき、チームワークの強さを感じました。</h3>
                 </div>
                 <div class="name2">
                     <h2>大学生活において特に力を注いだこと</h2>
