--- a/index4.html
+++ b/index4.html
@@ -18,23 +18,17 @@
                 </div>
             </div>
 			<div class="main">
-                <h2>興味</h2>
+			    <div class="name1"><h2>興味</h2></div>
                  <div class="pane">
                       <h3>&nbsp;&nbsp;&nbsp;&nbsp;趣味は写真撮影、編集です。写真撮影は自分が大切にしたことを記録できるからです。写真を面白 く、美しく作ることで、イメージが湧いてきて作品になっていく。そして、見る人の心を動かして、 自分の思いを形として伝えることはできます。</h3>
                      <img src="img/f.jpg" >
                 </div>
- 
-                    
-                       <h2>サークル</h2> 
-                  
-                    <div class="pane1">
-                       <img src="img/a%20(21).jpg">
+                    <div class="name2"><h2>サークル</h2></div> 
+					<div class="pane1">
+                        <img src="img/a%20(21).jpg">
                         <h3>&nbsp;&nbsp;&nbsp;&nbsp;学生時代にダンスサークルを参加しました。初心者の私と先輩達との実力の差は歴然でした。グループダンスなので、一体感がとても重要なので、みんなの足を引っ張らないため、家で先輩の踊りビデオを見て、毎日２時間練習しました。みんなと同じスピードで踊れるように、昼食時間または授業の空きコマがあれば、グループの学生と集まり、一緒に練習しました。２ヶ月以上、練習し続けた結果、みんなに追いつくことができ、文化祭で一体感を持って踊れました。この経験から、何事も努力し続けば必ず自分の成長に繋げるのみならず、周りにもいい影響を与えることを学びました。</h3>
                      </div>
-            </div>
-            <div class="footer">
-                   <h2>作品</h2> 
-                </div>
+            <div class="name3"> <h2>作品</h2> </div>
                 <div class="pane2">
                     <h3>lllustratorを使って作った作品</h3>
                     <img src="img/i.jpg" >
